--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {  
-  "name": "Think/FUCK",  
+  "name": "think/fuck",  
   "description": "Yii2 zqy234 terrytest",  
   "keywords": [  
     "yii2",  
