--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,24 @@
 {  
   "name": "think/fuck",  
-  "description": "Yii2 zqy234 terrytest",  
+  "description": "Yii2 Think FUCK",  
   "keywords": [  
-    "yii2",  
-    "terrytest"  
+    "yii2"
   ],  
-  "homepage": "https://github.com/zqy234/terrytest",  
+  "homepage": "https://github.com/l3099915722/FUCK",  
   "type": "yii2-extension",  
   "license": "MIT",  
   "support": {  
-    "source": "https://github.com/zqy234/terrytest"  
+    "source": "https://github.com/l3099915722/FUCK"  
   },  
   "authors": [  
     {  
-      "name": "terry water",  
-      "email": "zqy234@126.com"  
+      "name": "think",  
+      "email": "99471700@qq.com"  
     }  
   ],  
   "minimum-stability": "stable",  
   "require": {  
-    "php": ">=5.4.0",  
+    "php": ">=5.4.45",  
     "yiisoft/yii2": ">=2.0.6"  
      
   },  
