--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
     }  
   ],  
   "require": {  
-    "php": ">=5.4.45",  
-    "yiisoft/yii2": ">=2.0.6"  
-     
+    "php": ">=5.4.45"     
   },  
   "autoload": {  
     "psr-4": {  
