--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {  
-  "name": "think/fuck",  
+  "name": "l3099915722/fuck",  
   "description": "Yii2 Think FUCK",  
   "keywords": [  
     "yii2"
