--- a/nginx/docker/config/default.conf
+++ b/nginx/docker/config/default.conf
@@ -1,6 +1,6 @@
 server {  
     listen  80;
-    server_name httpstat.us;
+    server_name localhost;
 
     set $root_path '/usr/share/nginx/html';
     set $php_path '/var/www/html/public';
