--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,13 @@ services:
     web:
         image: "laravel-nginx:latest"
         restart: unless-stopped
+        build:
+            context: ./nginx/
+            dockerfile: docker/Dockerfile
+        ports:
+            - "${APP_PORT:-80}:80"
+        volumes:
+            - ./nginx:/usr/share/nginx/html
         depends_on:
             - app
 
@@ -11,10 +18,15 @@ services:
     app:
         image: "laravel-php:latest"
         restart: unless-stopped
+        build:
+            context: ../laravel/
+            dockerfile: docker/Dockerfile
+        volumes:
+            - ../laravel:/var/www/html
         environment:
             ## Application Configuration ##
-            APP_ENV: ""
-            APP_DEBUG: "false"
+            APP_ENV: "dev"
+            APP_DEBUG: "true"
             APP_KEY: "base64:8wVC8Jv4Eio033ziKbUtD1pxUoMFeYyWzl8jaLJcrHg="
             CACHE_DRIVER: "file"
             ## Queue ##
@@ -35,6 +47,13 @@ services:
     mariadb:
         image: "laravel-mariadb:latest"
         restart: unless-stopped
+        build:
+            context: ./mariadb/
+            dockerfile: docker/Dockerfile
+        ports:
+            - "3306:3306"
+        volumes:
+            - laravel_dbdata:/var/lib/mysql
         environment:
             MYSQL_DATABASE: "laraveldocker"
             MYSQL_USER: "laravel"
@@ -44,3 +63,11 @@ services:
     redis:
         image: "laravel-redis:latest"
         restart: unless-stopped
+        build:
+            context: ./redis/
+            dockerfile: docker/Dockerfile
+        ports:
+            - "6379:6379"  
+
+volumes:
+    laravel_dbdata:
